--- a/window.html
+++ b/window.html
@@ -5,7 +5,7 @@
     </head>
     <body style="margin: 0px; padding: 0px">
 
-        <webview id="whatsapp" src="http://web.whatsapp.com/" style="width: 800px; height:680px" partition="persist:whatsapp-for-chrome"></webview>
+        <webview id="whatsapp" src="https://web.whatsapp.com/" style="width: 800px; height:680px" partition="persist:whatsapp-for-chrome"></webview>
         <!--
         <iframe id="whatsapp" src="http://web.whatsapp.com/" style="width: 800px; height:680px"></iframe>
         -->
