Added Google Analytics

--- a/window.html
+++ b/window.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>WhatsApp for Chrome</title>
+        <script src="google-analytics-bundle.js"></script>
     </head>
     <body style="margin: 0px; padding: 0px">
 
